--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Testing some tool integrations.
 
 Not sure if all systems are using keys properly.
 
-SSH agent test.  Again. Now with Bash.
+SSH agent test.  Again. Now with Bash.  And it works.
